<resources>
    <string name="app_name">layoutProject</string>
    <string name="mainText">This is my layout project!</string>
    <string name="button1">BUTTON 1</string>
    <string name="button2">BUTTON 2</string>
    <string name="button3">BUTTON 3</string>
    <string name="checkBox1">Check Box 1</string>
    <string name="checkBox2">Check Box 2</string>
    <string name="checkBox3">Check Box 3</string>
    <string name="checkBox4">Check Box 4</string>
    <string name="checkBox5">Check Box 5</string>
    <string name="checkBox6">Check Box 6</string>
    <string name="imageDescription">Smiley Face</string>
</resources>